The ES6 version

--- a/Basic.javascript.notes/6_OOP_booklist/index.html
+++ b/Basic.javascript.notes/6_OOP_booklist/index.html
@@ -59,6 +59,8 @@
       </table>
     </div>
     <!-- for the ES5 version of implementation -->
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <!-- for the ES6 version of implementation -->
+    <script src="appes6.js"></script>
   </body>
 </html>
