--- a/Basic.javascript.notes/8_02_weatherDisplay/index.html
+++ b/Basic.javascript.notes/8_02_weatherDisplay/index.html
@@ -11,12 +11,28 @@
     <title>Weather!</title>
   </head>
   <body>
-    <div class="navbar navbar-dark bg-primary">
+    <div class="navbar navbar-dark bg-info">
       <div class="container">
         <div class="navbar-brand">OpenWeatherMap</div>
       </div>
     </div>
-    <div class="container"></div>
+    <div class="card text-white bg-info mt-3 mx-auto" style="max-width: 20rem;">
+      <h1 id="temperature" class="mb-3"></h1>
+      <h3 id="description"></h3>
+      <ul class="list-group ">
+          <li class="list-group-item align-items-center bg-info">
+              <h4 id="humidity"></h3>
+          </li>
+          <li class="list-group-item align-items-center bg-info">
+              <h4 id="sunrise"></h4>
+          </li>
+          <li class="list-group-item align-items-center bg-info">
+              <h4 id="sundown"></h4>
+          </li>
+      
+    </div>
+
+    <!-- The bootstrap scripts -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
