got the weather out!

--- a/Basic.javascript.notes/8_02_weatherDisplay/index.html
+++ b/Basic.javascript.notes/8_02_weatherDisplay/index.html
@@ -16,19 +16,18 @@
         <div class="navbar-brand">OpenWeatherMap</div>
       </div>
     </div>
-    <div class="card text-white bg-info mt-3 mx-auto" style="max-width: 20rem;">
-      <h1 id="temperature" class="mb-3"></h1>
+    <div class="card text-white bg-info mt-3 mx-auto text-center" style="max-width: 20rem;">
+      <h1 id="city"></h1>
+      <h2 id="temperature" class="mb-3"></h1>
       <h3 id="description"></h3>
-      <ul class="list-group ">
-          <li class="list-group-item align-items-center bg-info">
+      <ul class="list-group mt-2 text-dark">
+          <li class="list-group-item align-items-center bg-light">
+              <h4 id="wind"></h3>
+          </li>
+          <li class="list-group-item align-items-center bg-light">
               <h4 id="humidity"></h3>
           </li>
-          <li class="list-group-item align-items-center bg-info">
-              <h4 id="sunrise"></h4>
-          </li>
-          <li class="list-group-item align-items-center bg-info">
-              <h4 id="sundown"></h4>
-          </li>
+          
       
     </div>
 
