finish the little weather app

--- a/Basic.javascript.notes/8_02_weatherDisplay/index.html
+++ b/Basic.javascript.notes/8_02_weatherDisplay/index.html
@@ -28,8 +28,17 @@
               <h4 id="humidity"></h3>
           </li>
           
+      <form >
+        <div class="form-group mt-4">
+          <label for="searchCity" class="text-light">Enter a city name: </label>
+          <input type="text" id='searchCity' placeholder="City name" class="p-2">
+          <input type="submit" class="btn btn-info mt-3 btn-block p-2 m-2" id="searchBtn">
+        </div>
+      </form>
       
     </div>
+
+ 
 
     <!-- The bootstrap scripts -->
     <script
