--- a/Basic.javascript.notes/8_03_Ghibli/index.html
+++ b/Basic.javascript.notes/8_03_Ghibli/index.html
@@ -11,6 +11,24 @@
     <title>Ghibli Studio Medley</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
+        <a
+          class="navbar-brand"
+          href="https://www.studioghibli.com.au/"
+          target="_blank"
+          >Ghibli Studio Medley</a
+        >
+      </nav>
+
+      <!-- The flex box in bootstrap4 -->
+      <div
+        class="d-flex flex-row  mb-3 flex-wrap justify-content-between mt-3"
+        id="flex-container"
+      ></div>
+    </div>
+
+    <!-- The scripts -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
