--- a/Basic.javascript.notes/8_03_Ghibli/index.html
+++ b/Basic.javascript.notes/8_03_Ghibli/index.html
@@ -9,15 +9,34 @@
       href="https://bootswatch.com/4/sketchy/bootstrap.min.css"
     />
     <title>Ghibli Studio Medley</title>
+    <style>
+      .nav-background {
+        background: linear-gradient(
+          90deg,
+          rgba(227, 237, 176, 0.7),
+          rgba(175, 202, 221, 0.7),
+          rgba(248, 203, 161, 0.7),
+          rgba(223, 179, 166, 0.7)
+        );
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light nav-background">
+        <img
+          src="ghibli_brand.gif"
+          alt="Ghibli_brand"
+          width="150px"
+          height="80px"
+          display="inline"
+        />
+
         <a
-          class="navbar-brand"
+          class="navbar-brand text-center"
           href="https://www.studioghibli.com.au/"
           target="_blank"
-          >Ghibli Studio Medley</a
+          ><h2>Ghibli Movie Medley</h2></a
         >
       </nav>
 
