--- a/Basic.javascript.notes/8_04_bored_API/index.html
+++ b/Basic.javascript.notes/8_04_bored_API/index.html
@@ -13,7 +13,6 @@
         background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('pandas_pexels.jpg'), no-repeat;
         background-position: center;
         background-size: cover;
-
       }
     </style>
 
@@ -62,6 +61,42 @@
           >Gimme somethin' inspirational</a
         >
       </p>
+    </div>
+
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-4">
+            <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
+                <div class="card-header">Easy</div>
+                <div class="card-body">
+                  <h4 class="card-title" id="easy-activity"></h4>
+                  <p class="card-text" id="easy-accessibility"></p>
+                  <p class="card-text" id="easy-price"></p>
+                </div>
+        </div>
+      </div>
+
+        <div class="col-md-4">
+            <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+                <div class="card-header">Normal</div>
+                <div class="card-body">
+                  <h4 class="card-title" id="normal-activity"></h4>
+                  <p class="card-text" id="normal-accessibility"></p>
+                  <p class="card-text" id="normal-price"></p>
+                </div>
+        </div>
+      </div>
+        <div class="col-md-4">
+            <div class="card text-white bg-danger mb-3" style="max-width: 20rem;">
+                <div class="card-header">Hard</div>
+                <div class="card-body">
+                    <h4 class="card-title" id="hard-activity"></h4>
+                    <p class="card-text" id="hard-accessibility"></p>
+                    <p class="card-text" id="hard-price"></p>
+                </div>
+        </div>
+      </div>
+      </div>
     </div>
 
     <!-- script -->
