--- a/Basic.javascript.notes/8_04_bored_API/index.html
+++ b/Basic.javascript.notes/8_04_bored_API/index.html
@@ -65,7 +65,7 @@
 
     <div class="container ">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 h-100">
             <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
                 <div class="card-header">Easy</div>
                 <div class="card-body">
@@ -76,7 +76,7 @@
         </div>
       </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 h-100">
             <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
                 <div class="card-header">Normal</div>
                 <div class="card-body">
@@ -86,7 +86,7 @@
                 </div>
         </div>
       </div>
-        <div class="col-md-4">
+        <div class="col-md-4 h-100">
             <div class="card text-white bg-danger mb-3" style="max-width: 20rem;">
                 <div class="card-header">Hard</div>
                 <div class="card-body">
