changed the button but the fetch is problematic again

--- a/Basic.javascript.notes/8_04_bored_API/index.html
+++ b/Basic.javascript.notes/8_04_bored_API/index.html
@@ -25,7 +25,7 @@
       <div class="searchArea">
         <form class="container mb-4 mt-5 row text-center mx-auto" >
           <div id="form-type" class="col-lg-6 form-group">
-            <label for="type"><h3>What type?</h3></label>
+            <label for="type"><h3>What type are you interested in?</h3></label>
             <select name="type" id="type" size="4" class="form-control">
               <option value="recreational" selected>Recreational</option>
               <option value="education">Education</option>
@@ -53,15 +53,15 @@
               <option value="4">4</option>
               <option value="more">More</option>
             </select>
+
+          </div>
+          <p class="lead mx-auto text-center">
+            <input type="submit" class="btn btn-primary btn-lg mt-4 px-4 py-3" id="btn" value="Gimme somethin' inspirational">
+          </p>
+        </div>
           </form>
         </div>
-      </div>
-      <p class="lead mx-auto text-center">
-        <a class="btn btn-primary btn-lg " href="#" role="button"
-          >Gimme somethin' inspirational</a
-        >
-      </p>
-    </div>
+      
 
     <div class="container ">
       <div class="row">
