--- a/Basic.javascript.notes/Hub_01_DETK_report/index.html
+++ b/Basic.javascript.notes/Hub_01_DETK_report/index.html
@@ -11,10 +11,10 @@
     <nav class="navbar">
       <span class="open-slide">
         <a href="#" onclick="openSlideMenu()">
-          <svg width="30" height="30" class="hamburger-line">
-            <path d="M0,5 30,5" class="hamburger-line" />
-            <path d="M0,14 30,14" />
-            <path d="M0,23 30,23" />
+          <svg width="30" height="30">
+            <path d="M0,5 30,5" stroke="#c00" stroke-width="5" />
+            <path d="M0,14 30,14" stroke="#c00" stroke-width="5" />
+            <path d="M0,23 30,23" stroke="#c00" stroke-width="5" />
           </svg>
         </a>
       </span>
@@ -32,8 +32,8 @@
 
     <script>
       function openSlideMenu() {
-        document.getElementById("side-menu").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
+        document.getElementById("side-menu").style.width = "600px";
+        document.getElementById("main").style.marginLeft = "600px";
       }
 
       function closeSlideMenu() {
